# kivio

./: .gitignore  AGENTS.md  CHAT_DEVELOPMENT_STATUS.md  CLAUDE.md  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
.trellis/spec/backend/: agent-runtime.md  file-tools.md  native-tool-registry.md  window-lifecycle.md
.trellis/spec/chat/: artifact-presentation.md  compaction-contracts.md  conversation-fork.md  conversation-workspace.md  index.md  mcp-image-feedback.md  mcp-tool-discovery-cache.md  skill-runtime-tool.md  (+2 more)
docs/: CHAT_AGENT_RUNTIME_PRD.md  CHAT_ARCHITECTURE.md  RELEASE_PACKAGING.md
scripts/: gen-rapidocr-e2e-image.ps1  prepare-pyodide-assets.mjs
src/: App.tsx  Lens.tsx  Settings.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/skills/docx/: SKILL.md
src-tauri/resources/skills/himalaya/: SKILL.md
src-tauri/resources/skills/himalaya/references/: configuration.md  message-composition.md
src-tauri/resources/skills/pdf/: SKILL.md
src-tauri/resources/skills/xlsx/: SKILL.md
src-tauri/src/: api.rs  apple_intelligence.rs  cli_install.rs  commands.rs  lens.rs  lens_commands.rs  lib.rs  macos_ocr.rs  main.rs  path_env.rs  proc.rs  prompts.rs  rapidocr.rs  sck.rs  screenshot.rs  settings.rs  shortcuts.rs  state.rs  updates.rs  usage.rs  web_search.rs  windows.rs  windows_ocr.rs
src-tauri/src/agents/: mod.rs  parse.rs  types.rs
src-tauri/src/chat/: ask_user.rs  attachments.rs  commands.rs  dsml_tools.rs  export.rs  image_generation.rs  mcp_image_feedback.rs  memory.rs  mod.rs  model_call.rs  model_metadata.rs  plan.rs  probe.rs  request_debug.rs  storage.rs  sub_agent.rs  todo.rs  types.rs  vision.rs
src-tauri/src/chat/agent/: compaction.rs  context_estimate.rs  execute.rs  filter.rs  finalize.rs  host.rs  loop_.rs  loop_tests.rs  mod.rs  planning.rs  prepare.rs  recovery.rs  rounds.rs  stop.rs  stream.rs  synthesis.rs  types.rs
src-tauri/src/chat/commands/: agent_host.rs  attachments.rs  catalog.rs  context.rs  direct_image.rs  interaction.rs  messages.rs  mutations.rs  probe_runtime.rs  reply.rs  tests.rs  title.rs  tooling.rs  vision_compat.rs
src-tauri/src/chat/knowledge_base/: chunking.rs  commands.rs  embeddings.rs  ingest.rs  live_e2e_tests.rs  mod.rs  parse.rs  process.rs  store.rs
src-tauri/src/chat/model/: anthropic.rs  gemini.rs  mod.rs  openai.rs  responses.rs  types.rs
src-tauri/src/connectors/: himalaya.rs  mod.rs  oauth.rs  obsidian.rs
src-tauri/src/external_agents/: commands.rs  compact.rs  context.rs  detection.rs  mcp_inject.rs  mod.rs  prompt.rs  registry.rs  run.rs  slash.rs  spawn.rs  types.rs  workspace.rs
src-tauri/src/external_agents/defs/: acp.rs  claude.rs  codex.rs  cursor.rs  gemini.rs  hermes.rs  kimi.rs  mod.rs  opencode.rs  pi.rs
src-tauri/src/external_agents/session/: acp.rs  claude_init.rs  codex_app_server.rs  live.rs  mod.rs  pi_rpc.rs
src-tauri/src/external_agents/stream/: claude.rs  json_events.rs  mod.rs
src-tauri/src/kivio_code/: cli.rs  config.rs  executor.rs  mcp_setup.rs  mod.rs  project_context.rs  settings_loader.rs  skill_setup.rs  vision.rs
src-tauri/src/kivio_code/interactive/: agent_host.rs  app.rs  mod.rs  slash.rs  tool_card.rs
src-tauri/src/kivio_code/session/: mod.rs
src-tauri/src/kivio_code/tui/: autocomplete.rs  fuzzy.rs  keybindings.rs  keys.rs  kill_ring.rs  mod.rs  render.rs  terminal.rs  text_width.rs  undo_stack.rs  word_navigation.rs
src-tauri/src/kivio_code/tui/components/: editor.rs  input.rs  loader.rs  markdown.rs  mod.rs  select_list.rs  text.rs
src-tauri/src/mcp/: client.rs  manager.rs  mod.rs  native_registry.rs  registry.rs  types.rs
src-tauri/src/native_tools/: fetch.rs  files.rs  mod.rs  sandbox_exports.rs  shell.rs
src-tauri/src/plugins/: catalog.rs  install.rs  lifecycle.rs  mod.rs  preview.rs  state.rs
src-tauri/src/skills/: catalog.rs  discover.rs  marketplace.rs  mod.rs  parse.rs  runtime.rs  types.rs
src/api/: tauri.ts
src/chat/: AgentIcon.tsx  AgentTodoIndicator.tsx  AskUserBlock.tsx  AssistantCenter.tsx  AssistantMessageMeta.tsx  AssistantPicker.tsx  BackgroundJobsIndicator.tsx  Chat.tsx  ChatAttachments.tsx  ChatDotGridBackground.tsx  ChatImageViewer.tsx  ChatMarkdown.test.tsx  ChatMarkdown.tsx  ChatSectionMenu.tsx  ChatTitlebarActions.tsx  ChatWindowHost.tsx  CompactionDivider.tsx  CompactionInProgress.tsx  CompactionSummaryPanel.tsx  ContextIndicator.tsx  ConversationContextMenu.test.tsx  ConversationContextMenu.tsx  ConversationList.tsx  GeneratedFileArtifacts.tsx  InputBar.tsx  KnowledgeBaseChip.tsx  MessageBubble.test.tsx  MessageBubble.tsx  MessageGroup.test.tsx  MessageGroup.tsx  MessageList.tsx  ModelSelector.tsx  MultiModelSelector.tsx  PermissionPicker.tsx  PluginCenter.tsx  ProjectContextMenu.tsx  ProjectDialog.tsx  ReasoningBlock.test.tsx  ReasoningBlock.tsx  RuntimePicker.tsx  (+57 more)
src/components/: ModelDetailDrawer.tsx
src/data/: modelDatabase.json  modelMatching.test.ts  modelMatching.ts
src/lens/: ArrowSvg.tsx  ThinkingBlock.tsx  WebSearchBlock.tsx  annotation.ts  history.ts  layout.test.ts  layout.ts  markdown.ts  types.ts
src/onboarding/: OnboardingShell.tsx  ProviderSetupPanel.tsx  types.ts  validation.test.ts  validation.ts
src/settings/: ConnectorBrandIcons.tsx  ConnectorDetailModal.tsx  ConnectorsPanel.tsx  DocumentProcessingPanel.tsx  EmailConnectorForm.tsx  EmailConnectorModal.tsx  ExternalAgentsSettings.test.tsx  ExternalAgentsSettings.tsx  KivioCodeSettings.tsx  KnowledgeBasePanel.tsx  KnowledgeRagPanel.tsx  ModelPairSelect.tsx  NavIcons.tsx  ProviderModelsPicker.tsx  ProviderSortableList.tsx  RetrievalPanel.tsx  ScreenshotTranslationSettings.tsx  SettingsShell.tsx  UsageStatsPanel.tsx  components.test.tsx  components.tsx  connectorCatalog.ts  connectorToolToggle.test.ts  connectorToolToggle.ts  i18n.ts  providerPresets.ts  utils.test.ts  utils.ts
src/test/: setup.ts
src/utils/: chatTools.ts  tokens.ts
website/: STYLE.md  index.html
website/docs/: index.html
(+336 files in other folders)
