# Kivio Rust 后端 Cargo 配置
[package]
name = "kivio"
version = "2.7.5"
description = "Kivio - Screen-level AI assistant for macOS/Windows"
authors = ["ZM"]
license = "GPL-3.0-or-later"
edition = "2021"
# 项目有两个 binary（kivio 主应用 + kivio-code CLI）。`tauri dev` 跑裸 `cargo run`，
# 没有 default-run 会因「不知道跑哪个 binary」直接报错退出。固定默认跑主应用 kivio。
default-run = "kivio"

[lib]
name = "kivio"
path = "src/lib.rs"

[[bin]]
name = "kivio"
path = "src/main.rs"

[[bin]]
name = "kivio-code"
path = "src/bin/kivio-code.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 核心及插件
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# gzip：api.rs 请求体压缩开关 + rapidocr 模型解包（跨平台）
flate2 = "1"
tar = { version = "0.4", default-features = false }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
chrono = "0.4"

# HTTP 客户端与异步运行时
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time", "process", "io-util", "sync", "rt-multi-thread", "macros"] }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
scraper = "0.23"
html-escape = "0.2"
regex = "1"
ignore = "0.4"

# kivio-code 终端 agent CLI 用：参数解析 + 跨平台 app-data 目录定位。
clap = { version = "4", features = ["derive"] }
directories = "5"

# Kivio Code CLI / TUI
crossterm = "0.29"
unicode-width = "0.2"
unicode-segmentation = "1"
unicode-normalization = "0.1"
# TUI Markdown 渲染：pulldown-cmark 解析 + syntect 代码块语法高亮。
# syntect 默认特性会拉入 onig（C 依赖）；这里关默认、改用纯 Rust 的 fancy-regex 后端，
# 保持 cargo build 不需要外部 C 工具链。
pulldown-cmark = { version = "0.13", default-features = false }
syntect = { version = "5", default-features = false, features = [
  "default-syntaxes",
  "default-themes",
  "regex-fancy",
  "parsing",
  "html",
] }

# 工具库
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
# 连接器 OAuth（PKCE + DCR + loopback）：sha2 算 code_challenge，rand 生成 code_verifier，
# url 构造/解析 authorize URL 与回调 query。
sha2 = "0.10"
rand = "0.8"
url = "2.5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
arboard = "3"
enigo = "0.1.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
# 知识库 PDF 文本抽取（纯文本，扫描件留待 OCR fallback）。
pdf-extract = "0.7"
# 知识库 xlsx 解析（docx 复用已有 zip + 手写 w:t 抽取；html 复用 native_tools::fetch 的 scraper）。
calamine = "0.26"
# 知识库存储：SQLite 单文件（bundled 自带 FTS5）+ sqlite-vec 向量扩展（编译期静态链接，无 native 库分发）。
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"

# RapidOCR 离线识别：用 oar-ocr 封装好的 PaddleOCR pipeline。
# default-features = false 关掉 download-binaries，避免 cargo build 时下载 onnxruntime。
# 直接依赖 ort 并启用 load-dynamic，运行时通过 ort::init_from(dylib_path) 加载用户在
# 设置页面下载到 app data 目录的 dylib，安装包不带任何 ONNX Runtime 二进制。
oar-ocr = { version = "0.6.3", default-features = false }
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "load-dynamic", "api-24"] }
ndarray = "0.17"

# macOS 平台特有依赖（系统 API 调用）
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
# objc 0.2.7 内部用的就是 objc_exception 0.1：提供裸 @try/@catch（C 层），用于在 FFI 边界拦截
# overlay 主线程 objc 调用抛出的 NSException——catch_unwind 接不住外来异常会 abort。直接依赖它而
# 不开 objc 的 `exception` feature（那会把每个 msg_send! 都包起来并 panic，副作用太大）。
objc_exception = "0.1"
core-graphics = "0.24"
core-foundation = "0.10"
# ScreenCaptureKit 截图：macOS 14+ 走 SCScreenshotManager 取代 `screencapture` CLI
screencapturekit = { version = "1.5", features = ["macos_14_0"] }

# Unix 平台特有依赖：进程组管理（setsid + kill(-pgid)）在 macOS 与 Linux 上都用 libc。
# 必须放在 cfg(unix) 而非 cfg(target_os = "macos")，否则 native_tools/shell.rs 的
# #[cfg(unix)] 代码在 Linux 构建会报 `use of undeclared crate libc`。
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows 平台特有依赖（屏幕截图、选中文本捕获）
[target.'cfg(target_os = "windows")'.dependencies]
xcap = "0.8"
windows = { version = "0.61.3", features = [
  "Foundation",
  "Foundation_Collections",
  "Globalization",
  "Graphics_Imaging",
  "Media_Ocr",
  "Storage",
  "Storage_Streams",
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_Console",
  "Win32_System_DataExchange",
  "Win32_System_LibraryLoader",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_System_WinRT",
  "Win32_UI_Accessibility",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
windows-future = "0.2.1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
# 测试用：test-util 提供 tokio 暂停时钟（start_paused），让重试退避 sleep 在单测中瞬时跳过。
tokio = { version = "1", features = ["test-util", "macros", "rt", "rt-multi-thread", "time"] }
# 测试用：构造 reqwest::Response（不走网络）以驱动 retry/failover 单测。与 reqwest 传递依赖同版本。
http = "1"

# dev 构建只把「依赖库」按 opt-level 3 编译，本 crate 仍保持 debug（增量编译快、可调试）。
# 解决 `npm run dev` 下 Lens / 快速翻译冻结帧截图慢的问题：image/png/xcap 这类纯 CPU 的
# 图像编码在未优化的 debug 依赖里慢几十倍（整屏 PNG 编码可达数秒）。优化依赖后接近 release。
# 仅影响 dev 体验，不改变 release 安装包的产物。首次构建会因依赖按优化重编一次而变慢。
[profile.dev.package."*"]
opt-level = 3

# release 产物优化：缩小二进制、加快冷启动 mmap。纯产物层优化，不改运行时行为。
# strip 去符号表（实测省 ~8%）；lto="thin" + codegen-units=1 跨 crate 内联去冗余；
# opt-level="s" 偏体积。panic 仍保持默认 unwind —— 不设 "abort"，因为 macOS overlay 走
# catch_unwind / ObjC 异常拦截（见 lib.rs），abort 会破坏其 unwind 语义。
[profile.release]
strip = true
lto = "thin"
codegen-units = 1
opt-level = "s"
